--- a/source/scss/purpleline-settings.scss
+++ b/source/scss/purpleline-settings.scss
@@ -156,8 +156,8 @@ $warning-color: $lighter-orange;
 $info-color: $light-blue;
 
 // We use these to control various global styles
-// $body-bg: $white;
-// $body-font-color: $jet;
+$body-bg: $white;
+$body-font-color: $jet;
 $body-font-family: $font-family-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
