--- a/source/scss/purpleline_components/accordion.scss
+++ b/source/scss/purpleline_components/accordion.scss
@@ -1,9 +1,18 @@
 .accordion {
 	@include accordion-navigation ($bg: $white-smoke);
+
+	.accordion-navigation > a, dd > a {
+		font-family:$font-family-sans-serif;
+		font-weight:bold;
+	}
+
 	li {
 		border: 1px solid $gainsboro;
 		border-radius: $global-radius;
 		margin-top: $global-radius;
+		font-family:$font-family-sans-serif;
+		font-size: 1rem;
+		line-height: 1.7222222222rem;
 		a:before {
 			content: "\f067 \0000a0\0000a0";
 			font-size: .7em;
@@ -19,3 +28,4 @@
 		}
 	}
 }
+
