--- a/source/scss/purpleline_components/typography.scss
+++ b/source/scss/purpleline_components/typography.scss
@@ -42,7 +42,7 @@ h1 {
 	}
 }
 
-h2 {
+h2, h3, h4, h5, h6 {
 	&.intro {
 		color: $orange;
 		font-family: $font-family-sans-serif;
@@ -71,10 +71,30 @@ p aside {
 	line-height: 1.35;
 }
 
-a {
-	transition: color 0.3s ease-in-out;
+
+
+
+a img {
+	border: none;
 }
 
+/* Better Underline Links
+================================================== */
+a {
+	-moz-transition: color 200ms ease;
+	-o-transition: color 200ms ease;
+	-webkit-transition: color 200ms ease;
+	transition: color 200ms ease;
+
+	line-height: inherit;
+	
+}
+
+p {
+	a, a:link,a:visited {
+		@include linkstyle($color:$body-font-color, $hover-color:$link-blue-hover, $background:$body-bg, $weight:1px, $offset:2px )
+	}
+}
 
 
 
