--- a/source/scss/purpleline_components/typography_components/logo-mark.scss
+++ b/source/scss/purpleline_components/typography_components/logo-mark.scss
@@ -1,4 +1,8 @@
 .logo-mark {
+	font-family:$font-family-display-serif;
+	font-style: italic;
+	// letter-spacing: 5px;
+	font-weight:normal;
 	font-size: 60px;
 	white-space: nowrap;
 	line-height: 1em;
@@ -8,7 +12,7 @@
 		font-size: rem-calc(65);
 		margin-top: 5px;
 	}
-	& + h2.intro {
+	& + .intro {
 		margin-top: 0px;
 	}
 	// TODO: Adjust this min-width as needed
@@ -26,6 +30,7 @@
 		border-color: #0f9bd1 #fff;
 	}
 	span {
+		//font-family:$font-family-sans-serif;
 		background: none repeat scroll 0 0 $light-blue;
 		border-radius: 3px 0px 3px 3px;
 		color: #FFFFFF;
